--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <repository>
             <id>central</id>
             <name>Central Repository</name>
-            <url>http://maven.oschina.net/content/groups/public/</url>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
             <layout>default</layout>
             <snapshots>
                 <enabled>false</enabled>
@@ -36,7 +36,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>4.10</junit.version>
-        <kotlin.version>1.2.0</kotlin.version>
+        <kotlin.version>1.5.21</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
     </properties>
